tests/types/errors/query_where_bool_required.mochi
// Query `where` predicate must be `bool` (T033).
let xs: list<int> = [1, 2, 3]
let bad = from x in xs where x select x
